--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "short-polling": "node short-polling/index.js",
-    "long-polling": "node long-polling/index.js"
+    "long-polling": "node long-polling/index.js",
+    "web-sockets": "node web-sockets/index.js"
   },
   "repository": {
     "type": "git",
@@ -25,6 +26,7 @@
   "homepage": "https://github.com/ashumsd7/web-communication-techniques#readme",
   "description": "",
   "dependencies": {
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "socket.io": "^4.8.1"
   }
 }
